fix overflow-x

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,6 +1,7 @@
 #contact {
 	min-height: 85vh;
 	background: linear-gradient(176deg, #006f69 70%, #FBEEC1 calc(70% + 2px));
+	overflow-x: hidden;
 	.top {
 		height: 0;
 		padding-top: 1em;
